--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,10 +1,13 @@
 /*Banner Principal*/
 
+
 .bgimage {
     height: 100vh;
-    background-image: url(../img/4.jpg);
+
+    background-image: url(../img/gif1.gif);
+
     background-size: cover;
-    position: relative;
+    background-position: center;
 }
 
 .hero_tittle {
@@ -12,14 +15,39 @@
 }
 
 .hero_desc {
-    font-size: 2rem;
+    font-size: 1.3rem;
 }
 
-.hero-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
+
+
+/*Seccion 2*/
+.title-sect2 {
+    font-size: 2.5rem;
+}
+
+.info-sect2 {
+    text-align: justify;
+    font-size: 15px;
+}
+
+.infoName {
+    font-size: 17px;
+}
+
+.btn-cv:hover {
+    transform: scale(1.1);
+
+    transition: transform 0.3s;
+}
+
+.info-hobbies {
+    color: rgb(31, 105, 252);
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
+.imgIcon:hover {
+    transform: scale(1.5);
+
+    transition: transform 0.3s;
 }
