--- a/css/estilo.css
+++ b/css/estilo.css
@@ -19,6 +19,11 @@
 }
 
 
+#sobreMi {
+    height: auto;
+    margin-bottom: 100px;
+}
+
 
 /*Seccion 2*/
 .title-sect2 {
@@ -51,3 +56,33 @@
 
     transition: transform 0.3s;
 }
+
+/*section skills*/
+#Skills {
+    height: auto;
+}
+
+
+.tittle-section3 {
+    font-size: 2.5rem;
+}
+
+.bgimage2 {
+
+    background-image: url(../img/5.jpg);
+
+    background-size: cover;
+    background-position: center;
+}
+
+.card:hover {
+    transform: scale(1.05);
+    transition: transform 0.3s;
+}
+
+/* .carousel-item img {
+    height: 500px;
+    width: 140vh;
+    background-size: cover;
+    background-position: center;
+} */
