refactor: Size of cards

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -75,6 +75,10 @@
     background-position: center;
 }
 
+.card {
+    height: auto;
+}
+
 .card:hover {
     transform: scale(1.05);
     transition: transform 0.3s;
