--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,14 @@
 /*Banner Principal*/
 
 
+.navbar-brand,
+.offcanvas-title {
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1.8rem;
+}
+
 .bgimage {
     height: 100vh;
 
@@ -71,11 +79,15 @@
 .bgimage2 {
     background-image: url(../img/5.jpg);
     background-size: cover;
+    /* La imagen se ajusta completa */
+    background-repeat: no-repeat;
+    /* Evita que se repita */
     background-position: center;
+    /* Centrada en el espacio */
 }
 
 .card {
-    height: auto;
+
     border-radius: 20px;
     /*box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
     color: black;
@@ -86,6 +98,8 @@
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
+
+
 
 /* .card-body {
     background-color: white;
@@ -149,4 +163,12 @@
     text-align: justify;
     width: 95%;
     align-items: center;
+}
+
+
+
+
+#contact .btn:hover {
+    transform: scale(1.05);
+    transition: 0.3s;
 }
